# typeway

./: .dockerignore  .gitignore  AXUM-MIGRATION-TOOL-DESIGN.md  BLOG-POST-DRAFT.md  CHANGELOG.md  Cargo.toml  DESIGN.md  GRPC-FUTURE-WORK.md  GRPC-INTEROP-DESIGN.md  GRPC-REWRITE-PLAN.md  LICENSE-APACHE  LICENSE-MIT  PRODUCTION-HARDENING.md  README.md  REMAINING-PRIORITIES.md  SPIKE-REVIEW.md  TYPE-LEVEL-DESIGN.md  TYPEWAY-GRPC-PLAN.md  TYPEWAY-GRPC-REWRITE-DESIGN.md  TYPEWAY-PROTOBUF-DESIGN.md  deny.toml
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/chat/static/: index.html
examples/iot-gateway/: Cargo.toml  README.md
examples/iot-gateway/src/: main.rs
examples/orderbook/: Cargo.toml  README.md
examples/orderbook/src/: from_proto.rs  (+1 more)
examples/realworld/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/versioned-api/: Cargo.toml  README.md
interop/: Cargo.toml  README.md  build.rs
interop/proto/: empty.proto  messages.proto  test.proto
interop/scripts/: run-grpc-interop.sh
interop/src/: lib.rs  main.rs  server.rs
interop/tests/: extras_interop.rs  streaming_interop.rs  unary_interop.rs
typeway/: CHANGELOG.md  Cargo.toml
typeway-client/: CHANGELOG.md  Cargo.toml
typeway-client/src/: call.rs  client.rs  config.rs  error.rs  interceptor.rs  lib.rs  methods.rs  request_builder.rs  retry.rs  streaming.rs  tracing_interceptor.rs  typed_response.rs
typeway-client/tests/: builder_tests.rs  integration.rs  interceptor_tests.rs  methods_tests.rs  query_tests.rs  retry_tests.rs
typeway-core/: CHANGELOG.md  Cargo.toml
typeway-core/src/: api.rs  docs.rs  effects.rs  endpoint.rs  lib.rs  negotiate.rs  path.rs  session.rs  versioning.rs
typeway-core/tests/: session_types_test.rs  versioning_test.rs
typeway-grpc/: CHANGELOG.md  Cargo.toml  DESIGN.md
typeway-grpc/src/: bridge.rs  build.rs  client.rs  codec.rs  codegen.rs  compression.rs  diff.rs  docs_page.rs  error_details.rs  framing.rs  health.rs  interceptors.rs  lib.rs  main.rs  mapping.rs  multiplex.rs  native_client.rs  native_streaming.rs  proto_codec.rs  proto_gen.rs  proto_parse.rs  ready.rs  reflection.rs  service.rs  spec.rs  status.rs  streaming.rs  test_client.rs  tonic_compat.rs  trailer_body.rs  transcode.rs  typeway_codec.rs  typeway_codec_adapter.rs  validate.rs  web.rs
typeway-grpc/tests/: bridge_test.rs  client_test.rs  codec_test.rs  codegen_roundtrip.rs  conformance_smoke.rs  diff_test.rs  error_details_test.rs  framing_test.rs  health_test.rs  interceptor_test.rs  multiplex_test.rs  proto_gen_test.rs  proto_parse_test.rs  protoc_cross_validation.rs  ready_test.rs  reflection_test.rs  spec_test.rs  status_test.rs  streaming_test.rs  tonic_compat_test.rs  validate_test.rs  web_test.rs
typeway-macros/: CHANGELOG.md  Cargo.toml
typeway-macros/src/: lib.rs
typeway-macros/tests/: handler_tests.rs
typeway-migrate/: CHANGELOG.md  Cargo.toml  DESIGN.md
typeway-migrate/src/: cargo_editor.rs  interactive.rs  lib.rs  main.rs  model.rs
typeway-migrate/tests/: advanced_axum_test.rs  auth_migration_test.rs  axum_to_typeway_test.rs  client_gen_test.rs  effects_migration_test.rs  extractor_passthrough_test.rs  merge_test.rs  partial_test.rs  roundtrip_test.rs  typeway_to_axum_test.rs  validation_migration_test.rs
typeway-openapi/: CHANGELOG.md  Cargo.toml
typeway-openapi/src/: codegen_common.rs  codegen_v2.rs  codegen_v3.rs  derive.rs  lib.rs  spec.rs  swagger_output.rs
typeway-openapi/tests/: codegen_integration.rs  enhanced_spec_test.rs  schema_derive_test.rs  spec_gen.rs
typeway-protobuf/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  UNSAFE.md
typeway-protobuf/src/: builder.rs  codec.rs  lib.rs  repeated.rs  wire.rs
typeway-server/: CHANGELOG.md  Cargo.toml
typeway-server/examples/: auth.rs  crud.rs  custom_extractors.rs  hello.rs  middleware.rs  streaming.rs  users.rs
typeway-server/src/: auth.rs  axum_interop.rs  body.rs  effects.rs  error.rs  extract.rs  grpc.rs  grpc_direct.rs  grpc_dispatch.rs  grpc_native.rs  grpc_stream.rs  handler.rs  handler_for.rs  lib.rs  mount.rs  multipart.rs  negotiate.rs  openapi.rs  production.rs  proto_extract.rs  request_id.rs  response.rs  router.rs  secure_headers.rs  server.rs  serves.rs  sse.rs  tls.rs  typed.rs  typed_bind.rs  typed_response.rs  typed_ws.rs  ws.rs
typeway-server/tests/: axum_interop_integration.rs  body_limits_integration.rs  effects_integration.rs  fuzz_tests.rs  grpc_direct_test.rs  grpc_integration.rs  grpc_native_integration.rs  middleware_integration.rs  multi_version_integration.rs  negotiate_integration.rs  openapi_integration.rs  panic_safety_integration.rs  routing_integration.rs  secure_headers_integration.rs  typed_wrappers_integration.rs  typed_ws_test.rs
typeway/benches/: codec.rs  dispatch.rs  grpc_e2e.rs  routing.rs
typeway/examples/: client_server.rs  grpc.rs  hello_world.rs  users_api.rs
typeway/src/: lib.rs
typeway/tests/: codec_roundtrip.rs
wayward/: Cargo.toml
wayward-client/: Cargo.toml
wayward-client/src/: call.rs  client.rs  error.rs  lib.rs
wayward-client/tests/: integration.rs
wayward-macros/: Cargo.toml
wayward-macros/src/: lib.rs
wayward-macros/tests/: handler_tests.rs
wayward-openapi/: Cargo.toml
wayward-openapi/src/: derive.rs  lib.rs  spec.rs
wayward-openapi/tests/: spec_gen.rs
wayward-server/: Cargo.toml
wayward-server/examples/: auth.rs  crud.rs  custom_extractors.rs  hello.rs  middleware.rs  streaming.rs  users.rs
wayward-server/src/: auth.rs  axum_interop.rs  body.rs  ep.rs  error.rs  extract.rs  handler.rs  handler_for.rs  lib.rs  multipart.rs  openapi.rs  request_id.rs  response.rs  router.rs  server.rs  serves.rs  tls.rs  typed.rs  typed_bind.rs  typed_response.rs  ws.rs
wayward-server/tests/: axum_interop_integration.rs  middleware_integration.rs  openapi_integration.rs  routing_integration.rs  typed_wrappers_integration.rs
wayward/benches/: dispatch.rs  routing.rs
wayward/examples/: client_server.rs  hello_world.rs  users_api.rs
wayward/src/: lib.rs
wayward/tests/: compile_errors.rs
(+231 files in other folders)
