[workspace]
members = [
    "typeway-core",
    "typeway-server",
    "typeway-client",
    "typeway-openapi",
    "typeway-macros",
    "typeway-grpc",
    "typeway-protobuf",
    "typeway",
    "typeway-migrate",
    "spike",
    "examples/realworld",
    "examples/chat",
    "examples/versioned-api",
]
resolver = "2"

[workspace.package]
rust-version = "1.80"

[workspace.lints.clippy]
upper_case_acronyms = "allow"
