[workspace]
members = [
    "typeway-core",
    "typeway-server",
    "typeway-client",
    "typeway-openapi",
    "typeway-macros",
    "typeway-grpc",
    "typeway-protobuf",
    "typeway",
    "typeway-migrate",
    "examples/realworld",
    "examples/chat",
    "examples/versioned-api",
    "examples/iot-gateway",
    "examples/orderbook",
    "interop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Josh Burgess"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/typeway"
homepage = "https://github.com/joshburgess/typeway"
documentation = "https://docs.rs/typeway"
keywords = ["web", "framework", "type-level", "openapi", "grpc"]
categories = ["web-programming", "web-programming::http-server", "asynchronous"]

[workspace.lints.clippy]
upper_case_acronyms = "allow"
