[package]
name = "typeway-client"
description = "Type-safe HTTP client for the typeway web framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
typeway-core = { path = "../typeway-core", version = "0.1.0" }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
typeway-macros = { path = "../typeway-macros" }
typeway-server = { path = "../typeway-server" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[lints]
workspace = true
