[package]
name = "typeway-core"
description = "Core type-level primitives for the typeway web framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
http = "1"

[lints]
workspace = true
