[package]
name = "typeway-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typeway-grpc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
client = ["dep:typeway-client", "dep:reqwest", "dep:url", "dep:thiserror"]
test-client = ["dep:reqwest", "dep:serde_json"]
cli = ["dep:clap", "dep:anyhow"]

[dependencies]
typeway-core = { path = "../typeway-core" }
typeway-client = { path = "../typeway-client", optional = true }
http = "1"
indexmap = "2"
tower-service = "0.3"
tower-layer = "0.3"
hyper = { version = "1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1", optional = true }
url = { version = "2", optional = true }
thiserror = { version = "2", optional = true }

[dev-dependencies]
typeway-macros = { path = "../typeway-macros" }
typeway-client = { path = "../typeway-client" }
reqwest = { version = "0.12", features = ["json"] }
url = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
