[package]
name = "typeway-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typeway-grpc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
test-client = ["dep:reqwest"]
cli = ["dep:clap", "dep:anyhow"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
proto-binary = []
grpc-native = ["dep:tokio", "dep:pin-project-lite", "dep:reqwest", "dep:url", "dep:thiserror"]
compression = ["dep:flate2"]
prost-build = ["dep:prost", "dep:prost-build"]
tonic-compat = ["dep:prost", "dep:tonic"]

[dependencies]
typeway-core = { path = "../typeway-core" }
typeway-protobuf = { path = "../typeway-protobuf" }
typeway-client = { path = "../typeway-client", optional = true }
http = "1"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-service = "0.3"
tower-layer = "0.3"
hyper = { version = "1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
url = { version = "2", optional = true }
thiserror = { version = "2", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
pin-project-lite = { version = "0.2", optional = true }
flate2 = { version = "1", optional = true }
prost = { version = "0.13", optional = true }
prost-build = { version = "0.13", optional = true }
tonic = { version = "0.12", optional = true, default-features = false }

[dev-dependencies]
typeway-macros = { path = "../typeway-macros" }
typeway-client = { path = "../typeway-client" }
reqwest = { version = "0.12", features = ["json"] }
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3"

[lints]
workspace = true
