[package]
name = "typeway-macros"
description = "Procedural macros for the typeway web framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
typeway-core = { path = "../typeway-core" }
typeway-server = { path = "../typeway-server" }
typeway-openapi = { path = "../typeway-openapi" }
typeway-grpc = { path = "../typeway-grpc" }
typeway-protobuf = { path = "../typeway-protobuf" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
http = "1"

[lints]
workspace = true
