[package]
name = "typeway-migrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typeway-migrate"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"
walkdir = "2"
dialoguer = "0.11"

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints]
workspace = true
