[package]
name = "typeway-migrate"
description = "Code migration tool for porting axum services to typeway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[[bin]]
name = "typeway-migrate"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"
walkdir = "2"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints]
workspace = true
