[package]
name = "typeway-openapi"
description = "OpenAPI spec generation for the typeway web framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
typeway-core = { path = "../typeway-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
http = "1"
schemars = { version = "0.8", optional = true }

[dev-dependencies]
typeway-macros = { path = "../typeway-macros" }

[lints]
workspace = true
