[package]
name = "typeway-protobuf"
description = "Protobuf wire format codec for the typeway web framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
