[package]
name = "wayward-client"
version = "0.1.0"
edition = "2021"

[dependencies]
wayward-core = { path = "../wayward-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wayward-macros = { path = "../wayward-macros" }
wayward-server = { path = "../wayward-server" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
