[package]
name = "wayward"
version = "0.1.0"
edition = "2021"
description = "Type-level web framework for Rust — your API is a type"

[features]
default = ["server"]
server = ["dep:wayward-server"]
client = ["dep:wayward-client"]
openapi = ["dep:wayward-openapi", "wayward-server?/openapi"]
axum-interop = ["server", "wayward-server/axum-interop"]
full = ["server", "client", "openapi"]

[dependencies]
wayward-core = { path = "../wayward-core" }
wayward-macros = { path = "../wayward-macros" }
wayward-server = { path = "../wayward-server", optional = true }
wayward-client = { path = "../wayward-client", optional = true }
wayward-openapi = { path = "../wayward-openapi", optional = true }

# Re-export common deps so users don't need to depend on them directly
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
criterion = { version = "0.5", features = ["async_tokio"] }
trybuild = "1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
bytes = "1"

[[bench]]
name = "routing"
harness = false
required-features = ["server", "axum-interop"]

[[example]]
name = "hello_world"
required-features = ["server"]

[[example]]
name = "users_api"
required-features = ["server"]

[[example]]
name = "client_server"
required-features = ["full"]
