[package]
name = "typeway-chat"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
typeway-core = { path = "../../typeway-core" }
typeway-server = { path = "../../typeway-server", features = ["ws"] }
typeway-macros = { path = "../../typeway-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"

[lints]
workspace = true
