[package]
name = "wayward-realworld"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wayward = { path = "../../wayward", features = ["server", "openapi"] }
wayward-core = { path = "../../wayward-core" }
wayward-macros = { path = "../../wayward-macros" }
wayward-server = { path = "../../wayward-server" }

tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
slug = "0.1"
