[package]
name = "typeway-versioned-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
typeway-core = { path = "../../typeway-core" }
typeway-server = { path = "../../typeway-server" }
typeway-macros = { path = "../../typeway-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tower-http = { version = "0.6", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
